docker_kubernetes/Project/kubectl/project-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticket-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /backend/(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-clusterip
                port:
                  number: 6000
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: api-clusterip
                port:
                  number: 4000
          - path: /webapp/(.*)
            pathType: Prefix
            backend:
              service:
                name: webapp-clusterip
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-clusterip
                port:
                  number: 80
          - path: /keycloak/(.*)
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          # - path: /db/(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: postgres-clusterip
          #       port:
          #         number: 5432
